--- a/src/Echo/Echo.csproj
+++ b/src/Echo/Echo.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard1.3</TargetFrameworks>
+    <TargetFramework>net452</TargetFramework>
     <DebugType>Full</DebugType>
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
     <RunCodeAnalysis>True</RunCodeAnalysis>
@@ -30,16 +30,11 @@ Version 0.2
     <PackageProjectUrl>https://github.com/daulet/Echo</PackageProjectUrl>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Castle.Core" Version="4.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='net452'">
+    <PackageReference Include="Castle.Core" Version="3.3.3" />
     <PackageReference Include="Microsoft.CodeAnalysis" Version="1.3.2">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='netstandard1.3'">
-    <!-- @TODO System.Web replacement goes here - or migrate to Newtonsoft.JSON completely -->
+    <PackageReference Include="Newtonsoft.Json" Version="6.0.4" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
