--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,6 @@ environment:
         secure: ietwg3CM9P2rIXCj2b++OOPUs+3lMJZksq7GXcbjDVq7pJsFQb3eUmY17J6hcMfL
 
 after_test:
-    - cmd: packages\opencover\4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"packages\xunit.runner.console\2.3.1\tools\xunit.console.exe" -targetargs:".\test\Echo.UnitTests\bin\Debug\net46\Echo.UnitTests.dll .\test\Echo.IntegrationTests\bin\Debug\net452\Echo.IntegrationTests.dll -noshadow -parallel none" -output:coverage.xml
+    - cmd: packages\opencover\4.6.519\tools\OpenCover.Console.exe -register:user -filter:"+[*]*" -target:"packages\xunit.runner.console\2.3.1\tools\net452\xunit.console.exe" -targetargs:".\test\Echo.UnitTests\bin\Debug\net46\Echo.UnitTests.dll .\test\Echo.IntegrationTests\bin\Debug\net452\Echo.IntegrationTests.dll -noshadow -parallel none" -output:coverage.xml
     - cmd: packages\codecov\1.0.3\tools\codecov.exe -f coverage.xml -t %CODECOV_REPO_TOKEN%
     - cmd: packages\coveralls.io\1.4.2\tools\coveralls.net.exe --opencover coverage.xml -r %COVERALLS_REPO_TOKEN%
